--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="/catering-service website/bootstrap.css">
-    <script src="/catering-service website/javascript.js"></script>
+    <link rel="stylesheet" href="bootstrap.css">
+    <script src="javascript.js"></script>
     <link rel="stylesheet" href="portfolio.css">
 </head>
 
