--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="bootstrap.css">
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="portfolio.css">
@@ -28,9 +31,9 @@
                             Approaching Me🙋‍♀️
                         </a>
                         <ul class="dropdown-menu dropdown-color" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Contact Me via email</a></li>
-                            <li><a class="dropdown-item" href="#">linkedin account</a></li>
-                            <li><a class="dropdown-item" href="#">Github account</a></li>
+                            <li><a class="dropdown-item" href="mailto:Tayyabakhatri225@gmail.com">Contact Me via email</a></li>
+                            <li><a class="dropdown-item" href="https://linkedin.com/in/tayyaba-khatri-b14895289">linkedin account</a></li>
+                            <li><a class="dropdown-item" href="https://github.com/">Github account</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -40,30 +43,121 @@
     <!-- navbarend -->
     <div class="main-heading ">
         <p class="text-center">WEB DEVELOPER</p>
+
     </div>
     <div class="banner ">
         <!-- <img src="images/Blue Neon Creative Futuristic Name Gaming YouTube Banner (3).png" alt="" class="img-fluid"> -->
     </div>
+
+    <div class="d-flex justify-content-center my-5">
+        <h5 class="text-center" style="width: 50%;">Helping people growing their business by making attractive and
+            visually appealing
+            websites for them .
+
+            As a web developer, my responsibilities encompass a wide range of tasks aimed at creating and maintaining
+            functional, visually appealing, and user-friendly websites and web applications
+        </h5>
+    </div>
+    <!-- languages -->
+    <section class="languages my-5 px-5 d-flex flex-column justify-content-center">
+
+
+        <p class="text-center fw-bolder fs-1">Languages and tools I Know</p>
+        <div class="skill-bar">
+            <span class="skill">HTML</span>
+            <div class="bar">
+                <div class="progress html">90%</div>
+            </div>
+        </div>
+
+        <div class="skill-bar">
+            <span class="skill">CSS</span>
+            <div class="bar">
+                <div class="progress css">90%</div>
+            </div>
+        </div>
+
+        <div class="skill-bar">
+            <span class="skill">JavaScript</span>
+            <div class="bar">
+                <div class="progress js">30%</div>
+            </div>
+        </div>
+        <div class="skill-bar">
+            <span class="skill">Bootstrap5</span>
+            <div class="bar">
+                <div class="progress bs">70%</div>
+            </div>
+        </div>
+
+
+    </section>
     <!-- projects -->
     <section class="projects">
-        <div class="main-heading ">
+        <div class="project-heading ">
             <p class="text-center">PROJECTS</p>
         </div>
         <div class="card-1 container w-75 ">
             <div class="card bg-transparent border-0">
-                <h1 class="card-title my-4" style="color: rgba(0, 0, 0, 0.586);">Catering-service Website</h1>
+                <h1 class="card-title my-4" style="color: white;font-size: 80px;">Catering-service Website</h1>
                 <video src="images/Document - Google Chrome 2024-05-18 16-03-08.mp4" controls loop autoplay
                     class="video-responsive  "></video>
                 <div class="card-body">
 
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's
-                        content.</p>
-                    <a href="#" class="btn Go fw-bolder">Go somewhere</a>
+                    <p class="card-text text-light">
+                        A very simple ,elligent ,user-friendly ,dynamic and full of animations website that is visually
+                        appealing for user.
+                        <br> components i have use in it are:<br>
+                        HTML Vanilla<br>
+                        CSS and its animations <br>
+                        Bootstrap and its classes <br>
+                        javascript
+
+                    </p>
+
+                    <a href="https://tayyabakhatri.github.io/catering-service-only-Tayyabakhatri"
+                        class="btn Go fw-bolder">Visit Website</a>
+                </div>
+            </div>
+        </div>
+        <div class="card-1 container w-75 ">
+            <div class="card bg-transparent border-0">
+                <h1 class="card-title my-4 " style="color: white;font-size: 80px;">Down website</h1>
+                <video src="images/Document - Google Chrome 2024-05-24 07-13-05.mp4" controls loop autoplay
+                    class="video-responsive  "></video>
+                <div class="card-body">
+
+                    <p class="card-text text-light">
+                        A very simple ,elligent ,user-friendly ,dynamic and full of animations website that is visually
+                        appealing for user.
+                        <br> components i have use in it are:<br>
+                        HTML Vanilla<br>
+                        CSS and its animations <br>
+                        Bootstrap and its classes <br>
+                        javascript
+
+                    </p>
+
+                    <a href="https://tayyabakhatri.github.io/Date-web-site-by-Tayyaba-khatri"
+                        class="btn Go fw-bolder">Visit Website</a>
                 </div>
             </div>
         </div>
     </section>
+    <footer style="background-color: rgba(128, 128, 128, 0.188);">
+        <div class="d-flex justify-content-around" style="padding:  60px; ">
+            <a href="https://github.com/"><i class="fa-brands fa-github "
+                    style="color: black; font-size: 80px;"></i></a>
+            <a href="https://linkedin.com/in/tayyaba-khatri-b14895289"><i class="fa-brands fa-linkedin "
+                    style="color: #000000;  font-size: 80px;"></i></a>
+            <a href="mailto:Tayyabakhatri225@gmail.com"><i class="fa-regular fa-envelope"
+                    style="color: #000000;  font-size: 80px;"></i></a>
+        </div>
+    </footer>
+
+
+
+
 </body>
 
 </html>
