--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                             Approaching Me🙋‍♀️
                         </a>
                         <ul class="dropdown-menu dropdown-color" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item" href="mailto:Tayyabakhatri225@gmail.com">Contact Me via email</a></li>
-                            <li><a class="dropdown-item" href="https://linkedin.com/in/tayyaba-khatri-b14895289">linkedin account</a></li>
+                            <li><a class="dropdown-item" href="mailto:Tayyabakhatri225@gmail.com">Contact Me via
+                                    email</a></li>
+                            <li><a class="dropdown-item"
+                                    href="https://linkedin.com/in/tayyaba-khatri-b14895289">linkedin account</a></li>
                             <li><a class="dropdown-item" href="https://github.com/">Github account</a></li>
                         </ul>
                     </li>
